# aid

./: .gitignore  ALGORITHMS.md  ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT.md  DOMAIN_MODEL.md  HNP_REFERENCE.md  Makefile  PROJECT_LEAD_TRAINING.md  README.md  ROADMAP.md  TECH_STACK.md  go.mod  go.sum
.github/workflows/: ci.yml
bom-adapter/: BOM_CONTRACT.md  Cargo.toml
bom-adapter/src/: bom.rs  lib.rs  render.rs
bom-adapter/tests/: acceptance.rs  golden.rs  unit.rs  wasm_abi.rs
bom-adapter/tests/common/: mod.rs
bom-adapter/tests/golden/: clos-small.bom.csv  clos-small.bom.json  mesh-two-switch.bom.csv  mesh-two-switch.bom.json  switch-bom.bom.csv  switch-bom.bom.json
bom-adapter/tests/testdata/: clos-small.boms.json  mesh-two-switch.boms.json  switch-bom.boms.json
bom-adapter/tools/: gen-bom.sh
bom-adapter/tools/bom-gen/: .gitignore  moon.mod.json
cmd/aid/: cli_test.go  commands.go  f7a_integration_test.go  f7b_integration_test.go  facts.go  main.go  retirement_guard_test.go  serve.go  serve_catalog_test.go  serve_conflict_test.go  serve_test.go  structure_api_test.go  structure_create_api_test.go  validate_api_test.go
docs/: foundation-redesign.md
docs/followups/: kernel-validation-codes-for-surfaces.md  retire-old-kernel-abi-shells.md
docs/foundation/: f0-tech-approach.md  f2-allocation-fix-micro-note.md  f2-architecture-note.md  f3-architecture-note.md  (+4 more)
embed/: bom.wasm  embed.go  hhfab.wasm  kernel.wasm
hhfab-adapter/: Cargo.toml  IR_CONTRACT.md  README.md
hhfab-adapter/src/: crds.rs  emit.rs  ir.rs  lib.rs
hhfab-adapter/tests/: golden.rs  unit.rs  validate.rs  wasm_abi.rs
hhfab-adapter/tests/golden/: clos-small.wiring.yaml  mesh-two-switch.wiring.yaml
hhfab-adapter/tests/testdata/: clos-small.ir.json  mesh-two-switch.ir.json  switch-bom.ir.json
hhfab-adapter/tools/: gen-ir.sh
hhfab-adapter/tools/ir-gen/: .gitignore  moon.mod.json
kernel/: .gitignore  moon.mod.json
schema/: README.md  catalog-v1.json  topology-plan-v1.json  topology-plan-v2.json
scripts/: moon-prove-gate.sh  setup-proof-toolchain.sh
ui/: .gitignore  assets.go  moon.mod.json
wit/: README.md  bom-adapter.wit  hhfab-adapter.wit  topology-calculator.wit  types.wit  world.wit
(+185 files in other folders)
