[package]
name = "bom-adapter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "AID Layer-2 BOM export adapter (Phase 4, issue #8). Pure transformation: device-class-bom[] -> human-reviewable CSV + structured JSON. Consumes device-class-bom[] ONLY (renders; never recomputes the BOM)."

# cdylib: the core-wasm component artifact (JSON-over-linear-memory, D16 extended
# to Layer 2). rlib: so integration/unit tests can link the native library.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

[dev-dependencies]
# Pure-Rust wasm interpreter for the JSON-over-linear-memory ABI smoke test
# (proves the D16 boundary, not just the native transform).
wasmi = "0.31"
