[package]
name = "hhfab-adapter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "AID Layer-2 hhfab wiring export adapter (Phase 5, issue #9). Pure transformation: topology-ir -> hhfab wiring YAML. Consumes topology-ir ONLY."

# cdylib: the core-wasm component artifact (JSON-over-linear-memory, D16 extended
# to Layer 2). rlib: so integration/unit tests can link the native library.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
